package com.example.modifybanner;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

/**
 * Main Spring Boot application class for the ModifyBanner service.
 * This class bootstraps and launches the Spring application.
 */
@SpringBootApplication
public class ModifyBannerApplication {

	public static void main(String[] args) {
		SpringApplication.run(ModifyBannerApplication.class, args);
	}

}