package com.yourcompany.banner.model;

import lombok.Data;
import lombok.NoArgsConstructor;
import lombok.AllArgsConstructor;

import javax.persistence.Entity;
import javax.persistence.GeneratedValue;
import javax.persistence.GenerationType;
import javax.persistence.Id;
import java.time.LocalDateTime;

/**
 * Represents a Banner entity in the system.
 * This model class is used to store banner information in the database.
 * It includes fields for banner identification, content, display dates, and status.
 */
@Entity // Marks this class as a JPA entity, mapping it to a database table.
@Data // Lombok annotation to generate getters, setters, toString, equals, and hashCode methods.
@NoArgsConstructor // Lombok annotation to generate a no-argument constructor.
@AllArgsConstructor // Lombok annotation to generate a constructor with all fields.
public class Banner {

    @Id // Marks the 'id' field as the primary key.
    @GeneratedValue(strategy = GenerationType.IDENTITY) // Configures the primary key to be auto-generated by the database.
    private Long id; // Unique identifier for the banner.

    private String name; // Name or title of the banner.

    private String imageUrl; // URL to the banner image.

    private String targetUrl; // URL where the banner links to.

    private LocalDateTime startDate; // Date and time when the banner becomes active.

    private LocalDateTime endDate; // Date and time when the banner becomes inactive.

    private boolean active; // Status of the banner (true if active, false if inactive).

    private Long restaurantId; // Identifier for the Point Of Restaurant this banner is associated with.

    // Note: Additional fields like 'createdAt', 'updatedAt' could be added for auditing purposes.
    // For the scope of this DeleteBanner feature, these fields are sufficient.
}